attached_assets/Pasted-Compiled-with-problems-ERROR-in-src-pages-Chat-js-Module-build-failed-from-node-modules-b-1753169908704_1753169908705.txt
Compiled with problems:
×
ERROR in ./src/pages/Chat.js
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: /home/runner/workspace/plangenie-frontend/src/pages/Chat.js: Identifier 'React' has already been declared. (29:7)

  27 | import axios from 'axios';
  28 |
> 29 | import React, { useState, useEffect, useRef } from 'react';
     |        ^
  30 | import {
  31 |   Container,
  32 |   Typography,
    at constructor (/home/runner/workspace/plangenie-frontend/node_modules/@babel/parser/lib/index.js:367:19)
    at FlowParserMixin.raise (/home/runner/workspace/plangenie-frontend/node_modules/@babel/parser/lib/index.js:6627:19)
    at FlowScopeHandler.checkRedeclarationInScope (/home/runner/workspace/plangenie-frontend/node_modules/@babel/parser/lib/index.js:1644:19)
    at FlowScopeHandler.declareName (/home/runner/workspace/plangenie-frontend/node_modules/@babel/parser/lib/index.js:1610:12)
    at FlowScopeHandler.declareName (/home/runner/workspace/plangenie-frontend/node_modules/@babel/parser/lib/index.js:1711:11)
    at FlowParserMixin.declareNameFromIdentifier (/home/runner/workspace/plangenie-frontend/node_modules/@babel/parser/lib/index.js:7591:16)
    at FlowParserMixin.checkIdentifier (/home/runner/workspace/plangenie-frontend/node_modules/@babel/parser/lib/index.js:7587:12)
    at FlowParserMixin.checkLVal (/home/runner/workspace/plangenie-frontend/node_modules/@babel/parser/lib/index.js:7526:12)
    at FlowParserMixin.finishImportSpecifier (/home/runner/workspace/plangenie-frontend/node_modules/@babel/parser/lib/index.js:14266:10)
    at FlowParserMixin.parseImportSpecifierLocal (/home/runner/workspace/plangenie-frontend/node_modules/@babel/parser/lib/index.js:3411:31)
    at FlowParserMixin.maybeParseDefaultImportSpecifier (/home/runner/workspace/plangenie-frontend/node_modules/@babel/parser/lib/index.js:14370:12)
    at FlowParserMixin.parseImportSpecifiersAndAfter (/home/runner/workspace/plangenie-frontend/node_modules/@babel/parser/lib/index.js:14239:29)
    at FlowParserMixin.parseImport (/home/runner/workspace/plangenie-frontend/node_modules/@babel/parser/lib/index.js:14235:17)
    at FlowParserMixin.parseStatementContent (/home/runner/workspace/plangenie-frontend/node_modules/@babel/parser/lib/index.js:12876:27)
    at FlowParserMixin.parseStatementLike (/home/runner/workspace/plangenie-frontend/node_modules/@babel/parser/lib/index.js:12767:17)
    at FlowParserMixin.parseStatementLike (/home/runner/workspace/plangenie-frontend/node_modules/@babel/parser/lib/index.js:2946:24)
    at FlowParserMixin.parseModuleItem (/home/runner/workspace/plangenie-frontend/node_modules/@babel/parser/lib/index.js:12744:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (/home/runner/workspace/plangenie-frontend/node_modules/@babel/parser/lib/index.js:13316:36)
    at FlowParserMixin.parseBlockBody (/home/runner/workspace/plangenie-frontend/node_modules/@babel/parser/lib/index.js:13309:10)
    at FlowParserMixin.parseProgram (/home/runner/workspace/plangenie-frontend/node_modules/@babel/parser/lib/index.js:12625:10)
    at FlowParserMixin.parseTopLevel (/home/runner/workspace/plangenie-frontend/node_modules/@babel/parser/lib/index.js:12615:25)
    at FlowParserMixin.parseTopLevel (/home/runner/workspace/plangenie-frontend/node_modules/@babel/parser/lib/index.js:3715:28)
    at FlowParserMixin.parse (/home/runner/workspace/plangenie-frontend/node_modules/@babel/parser/lib/index.js:14492:10)
    at parse (/home/runner/workspace/plangenie-frontend/node_modules/@babel/parser/lib/index.js:14526:38)
    at parser (/home/runner/workspace/plangenie-frontend/node_modules/@babel/core/lib/parser/index.js:41:34)
    at parser.next (<anonymous>)
    at normalizeFile (/home/runner/workspace/plangenie-frontend/node_modules/@babel/core/lib/transformation/normalize-file.js:64:37)
    at normalizeFile.next (<anonymous>)
    at run (/home/runner/workspace/plangenie-frontend/node_modules/@babel/core/lib/transformation/index.js:22:50)
    at run.next (<anonymous>)
    at transform (/home/runner/workspace/plangenie-frontend/node_modules/@babel/core/lib/transform.js:22:33)
    at transform.next (<anonymous>)
    at step (/home/runner/workspace/plangenie-frontend/node_modules/gensync/index.js:261:32)
    at /home/runner/workspace/plangenie-frontend/node_modules/gensync/index.js:273:13
    at async.call.result.err.err (/home/runner/workspace/plangenie-frontend/node_modules/gensync/index.js:223:11)
ERROR
[eslint] 
src/pages/Chat.js
  Line 29:7:  Parsing error: Identifier 'React' has already been declared. (29:7)
